--- a/index.css
+++ b/index.css
@@ -6,4 +6,17 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+.footer {
+  position: absolute;
+  bottom: -10px;
+  font-size: 18px;
+  /* color: white; */
+}
+
+a,
+a:visited {
+  color: red;
 }
