--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,6 +11,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #137547;
 }
+h3{
+  margin: 5px 0 ;
+}
 p {
   display: inline;
 }
@@ -22,12 +25,29 @@ a:visited {
   font-weight: 600;
 }
 
-.instructions {
-  height: 100%;
-  top:50%;
+.instructions{
+  /* height: calc(100%0px); */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  right: 0;
+  top: 50%;
+  width: 250px;
   /* vertical-align: center; */
+  background-color: white;
   position: absolute;
   color: pink;
+}
+.hide{
+  display: none;
+}
+ 
+.ctrl{
+  display: flex;
+justify-content: space-between;
+}
+
+img{
+  width: 25px;
 }
 
 .footer {
