--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,10 +9,10 @@ body {
   display: flex;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #137547;
+  background-color: #34b177;
 }
-h3{
-  margin: 5px 0 ;
+h3 {
+  margin: 5px 0;
 }
 p {
   display: inline;
@@ -25,28 +25,35 @@ a:visited {
   font-weight: 600;
 }
 
-.instructions{
+.btn {
+  position: absolute;
+  width: 30px;
+  top: 72%;
+  right: .5%;
+}
+.hide {
+  display: none;
+}
+
+.info:hover + .instructions {
   /* height: calc(100%0px); */
   display: grid;
   grid-template-columns: 1fr 1fr;
   right: 0;
-  top: 50%;
+  top: 55%;
   width: 250px;
   /* vertical-align: center; */
   background-color: white;
   position: absolute;
   color: pink;
 }
-.hide{
-  display: none;
-}
- 
-.ctrl{
+
+.ctrl {
   display: flex;
-justify-content: space-between;
+  justify-content: space-between;
 }
 
-img{
+img {
   width: 25px;
 }
 
@@ -56,8 +63,8 @@ img{
   font-size: 18px;
 }
 .fa-heart {
-  color: red;
+  color: rgb(255, 0, 0);
 }
 .fa-mug-hot {
-  color: brown;
+  color:rgb(145, 0, 0);
 }
